--- a/app/client/assets/styles/common.scss
+++ b/app/client/assets/styles/common.scss
@@ -1,3 +1,21 @@
 body {
   color: #333;
 }
+.fixed-border {
+  position: fixed;
+  background: white;
+}
+.left, .right {
+  top: 0;
+  bottom: 0;
+  width: 15px;
+}
+.left {left: 0;}
+.right {right: 0;}
+.top, .bottom {
+  left: 0;
+  right: 0;
+  height: 15px;
+}
+.top {top: 0;}
+.bottom {bottom: 0;}
